# django_10_12_2025

./: .gitignore  README.md  api.http  main.py  pyproject.toml
dodatki/: faker_example.py  paginacja.py
jobboard/: offers.json
jobboard/accounts/: urls.py  views.py
jobboard/accounts/templates/accounts/: login.html
jobboard/jobboard/: settings.py  urls.py
jobboard/jobs/: admin.py  context_processor.py  factories.py  forms.py  models.py  tests.py  urls.py  views.py
jobboard/jobs/management/commands/: create_jobs.py
jobboard/jobs/migrations/: 0001_initial.py  0002_offer_created_at_offer_is_published.py  0003_offer_tags.py  0004_alter_offer_tags.py  0005_offer_recruiter.py  0006_alter_offer_recruiter_recruiterprofile.py  0007_company_offer_company.py  0008_company_logo.py  0009_registration.py  0010_alter_offer_recruiter.py
jobboard/jobs/templates/jobs/: create.html  details.html  list.html  lista.html
jobboard/snippets/: models.py  serializers.py  urls.py  views.py
jobboard/snippets/migrations/: 0001_initial.py  0002_rename_languge_snippet_language.py  0003_alter_snippet_title.py
jobboard/tags/: admin.py  factories.py  models.py
jobboard/tags/migrations/: 0001_initial.py
jobboard/templates/: about.html  base.html  contact.html
jobboard/templates/includes/: messages.html
jobboard/todos/: admin.py  factories.py  models.py  urls.py  views.py
jobboard/todos/migrations/: 0001_initial.py  0002_todo_tags.py  0003_category_todo_category.py  0004_alter_category_options_todo_status.py
jobboard/todos/templates/todos/: details.html  list.html  (+1 more)
