[project]
name = "django-10-12-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "crispy-bootstrap5>=2025.6",
    "django>=6.0",
    "django-crispy-forms>=2.5",
    "djangorestframework>=3.16.1",
    "factory-boy>=3.3.3",
    "faker>=38.2.0",
    "httpie>=3.2.4",
    "ipython>=9.8.0",
    "pillow>=12.0.0",
    "pygments>=2.19.2",
]
